--- a/theme/templates/blog/blog_post_detail.html
+++ b/theme/templates/blog/blog_post_detail.html
@@ -1,5 +1,5 @@
 {% extends "blog/blog_post_list.html" %}
-{% load mezzanine_tags comment_tags keyword_tags rating_tags i18n disqus_tags %}
+{% load mezzanine_tags comment_tags keyword_tags rating_tags i18n disqus_tags theme_tags %}
 
 {% block meta_title %}{{ blog_post.meta_title }}{% endblock %}
 
@@ -13,41 +13,28 @@
 {% endmetablock %}{% endblock %}
 
 {% block title %}
-{% editable blog_post.title %}{{ blog_post.title }}{% endeditable %}
+<!-- {% editable blog_post.title %}{{ blog_post.title }}{% endeditable %} -->
 {% endblock %}
 
 {% block breadcrumb_menu %}
 {{ block.super }}
-<li class="active">{{ blog_post.title }}</li>
+<!-- <li class="active">{{ blog_post.title }}</li> -->
 {% endblock %}
 
 {% block main %}
-
+<div id="content">
+<div class="col-md-9" id="blog-post">
+<div class="box">
 {% block blog_post_detail_postedby %}
 {% editable blog_post.publish_date %}
-<h6 class="post-meta">
+<p class="author-date">
     {% trans "Posted by" %}:
     {% with blog_post.user as author %}
     <a href="{% url "blog_post_list_author" author %}">{{ author.get_full_name|default:author.username }}</a>
-    {% endwith %}
+    {% endwith %} | 
     {% blocktrans with sometime=blog_post.publish_date|timesince %}{{ sometime }} ago{% endblocktrans %}
-</h6>
-{% endeditable %}
-{% endblock %}
-{% block blog_post_detail_commentlink %}
-<p>
-    {% if blog_post.allow_comments %}
-        {% if settings.COMMENTS_DISQUS_SHORTNAME %}
-            (<a href="{{ blog_post.get_absolute_url }}#disqus_thread"
-                data-disqus-identifier="{% disqus_id_for blog_post %}">{% spaceless %}
-                {% trans "Comments" %}
-            {% endspaceless %}</a>)
-        {% else %}(<a href="#comments">{% spaceless %}
-            {% blocktrans count comments_count=blog_post.comments_count %}{{ comments_count }} comment{% plural %}{{ comments_count }} comments{% endblocktrans %}
-            {% endspaceless %}</a>)
-        {% endif %}
-    {% endif %}
 </p>
+{% endeditable %}
 {% endblock %}
 
 {% block blog_post_detail_featured_image %}
@@ -112,8 +99,10 @@
 {% endwith %}
 </ul>
 {% endblock %}
+</div>
 
 {% block blog_post_detail_related_posts %}
+<div class="box">
 {% if related_posts %}
 <div id="related-posts">
 <h3>{% trans 'Related posts' %}</h3>
@@ -124,10 +113,35 @@
 </ul>
 </div>
 {% endif %}
+</div>
 {% endblock %}
 
-{% block blog_post_detail_comments %}
-{% if blog_post.allow_comments %}{% comments_for blog_post %}{% endif %}
-{% endblock %}
+    <div class="box">
+        <div id="comments">
+        {% block blog_post_detail_commentlink %}
+        <h4>
+            {% if blog_post.allow_comments %}
+                {% if settings.COMMENTS_DISQUS_SHORTNAME %}
+                    <a href="{{ blog_post.get_absolute_url }}#disqus_thread"
+                        data-disqus-identifier="{% disqus_id_for blog_post %}">{% spaceless %}
+                        {% trans "Comments" %}
+                    {% endspaceless %}</a>
+                {% else %}<a href="#comments">{% spaceless %}
+                    {% blocktrans count comments_count=blog_post.comments_count %}{{ comments_count }} comment{% plural %}{{ comments_count }} comments{% endblocktrans %}
+                    {% endspaceless %}</a>
+                {% endif %}
+            {% endif %}
+        </h4>
+        {% endblock %}
 
+        {% block blog_post_detail_comments %}
+            {% if blog_post.allow_comments %}
+                {% comments_for blog_post %}
+            {% endif %}
+        {% endblock %}
+        </div>
+    </div>
+</div>
+</div>
+</div>
 {% endblock %}
