--- a/theme/templates/blog/blog_post_list.html
+++ b/theme/templates/blog/blog_post_list.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
-{% load i18n mezzanine_tags blog_tags keyword_tags disqus_tags %}
+{% load i18n mezzanine_tags blog_tags pages_tags keyword_tags disqus_tags theme_tags %}
 
 {% block meta_title %}{% if page %}{{ page.meta_title }}{% else %}{% trans "Blog" %}{% endif %}{% endblock %}
 
 {% block meta_keywords %}{% metablock %}
 {% keywords_for page as keywords %}
 {% for keyword in keywords %}
-    {% if not forloop.first %}, {% endif %}
-    {{ keyword }}
+	{% if not forloop.first %}, {% endif %}
+	{{ keyword }}
 {% endfor %}
 {% endmetablock %}{% endblock %}
 
@@ -16,144 +16,182 @@
 {% endmetablock %}{% endblock %}
 
 {% block title %}
-{% if page %}
+<!-- {% if page %}
 {% editable page.title %}{{ page.title }}{% endeditable %}
 {% else %}
 {% trans "Blog" %}
-{% endif %}
+{% endif %} -->
 {% endblock %}
 
 {% block breadcrumb_menu %}
 {{ block.super }}
-{% if tag or category or year or month or author %}
+<!-- {% if tag or category or year or month or author %}
 <li>{% spaceless %}
 {% if tag %}
-    {% trans "Tag:" %} {{ tag }}
+	{% trans "Tag:" %} {{ tag }}
 {% else %}{% if category %}
-    {% trans "Category:" %} {{ category }}
+	{% trans "Category:" %} {{ category }}
 {% else %}{% if year or month %}
-    {% if month %}{{ month }}, {% endif %}{{ year }}
+	{% if month %}{{ month }}, {% endif %}{{ year }}
 {% else %}{% if author %}
-    {% trans "Author:" %} {{ author.get_full_name|default:author.username }}
+	{% trans "Author:" %} {{ author.get_full_name|default:author.username }}
 {% endif %}{% endif %}{% endif %}{% endif %}
 {% endspaceless %}
 </li>
-{% endif %}
+{% endif %} -->
+{% endblock %}
+
+{% block left_panel %}
+{% blog_menu_categories as categories %}
+<div class="col-md-3">
+	{% if categories %}
+		<div class="panel panel-default sidebar-menu">
+			<div class="panel-heading">
+				<h3 class="panel-title">{% trans "Categories" %}</h3>
+			</div>
+			<div class="panel-body">
+				<ul class="nav nav-pills nav-stacked">
+				{% for category in categories %}
+					{% url "blog_post_list_category" category.slug as the_url %}
+					<li class="{% if request.get_full_path == the_url %} active {% endif %}">
+					<a href="{{the_url}}"
+						>{{ category }} <span class="badge pull-right">{{ category.post_count }} </span>  </li>
+				{% endfor %}
+				</ul>
+			</div>
+		</div>
+	{% else %}
+		<div class="col-md-3 left">
+				<div class="panel panel-default">{% page_menu "pages/menus/tree.html" %}</div>
+		</div>
+	{% endif %}
+	<div class="box">
+		{% include "blog/includes/filter_panel.html" %}
+	</div>
+</div>
 {% endblock %}
 
 {% block main %}
+<div id="content">
+<div class="col-md-9" id="blog-listing">
+	<div class="box">
+	<h1>{{ category.title }}</h1>
+	{% if tag or category or year or month or author %}
+		{% block blog_post_list_filterinfo %}
+		<p>
+		{% if tag %}
+			{% trans "Viewing posts tagged" %} {{ tag }}
+		{% else %}{% if category %}
+			{% trans "Viewing posts for the category" %} {{ category }}
+		{% else %}{% if year or month %}
+			{% trans "Viewing posts from" %} {% if month %}{{ month }}, {% endif %}
+			{{ year }}
+		{% else %}{% if author %}
+			{% trans "Viewing posts by" %}
+			{{ author.get_full_name|default:author.username }}
+		{% endif %}{% endif %}{% endif %}{% endif %}
+		{% endblock %}
+		</p>
+	{% else %}
+		{% if page %}
+		{% block blog_post_list_pagecontent %}
+		{% if page.get_content_model.content %}
+			{% editable page.get_content_model.content %}
+			{{ page.get_content_model.content|richtext_filters|safe }}
+			{% endeditable %}
+		{% endif %}
+		{% endblock %}
+		{% endif %}
+	{% endif %}
+	</div>
+	
+	<div class="post">
+	{% for blog_post in blog_posts.object_list %}
+	{% block blog_post_list_post_title %}
+	{% editable blog_post.title %}
+	<h2>
+		<a href="{{ blog_post.get_absolute_url }}">{{ blog_post.title }}</a>
+	</h2>
+	{% endeditable %}
+	{% endblock %}
+	{% block blog_post_list_post_metainfo %}
+	{% editable blog_post.publish_date %}
+	<p class="author-category">
+		{% trans "Posted by" %}:
+		{% with blog_post.user as author %}
+		<a href="{% url "blog_post_list_author" author %}">{{ author.get_full_name|default:author.username }}</a>
+		{% endwith %}
+		{% with blog_post.categories.all as categories %}
+		{% if categories %}
+		{% trans "in" %}
+		{% for category in categories %}
+		<a href="{% url "blog_post_list_category" category.slug %}">{{ category }}</a>{% if not forloop.last %}, {% endif %}
+		{% endfor %}
+		{% endif %}
+		{% endwith %}
+		{% blocktrans with sometime=blog_post.publish_date|timesince %}{{ sometime }} ago{% endblocktrans %}
+	</p>
+	<p class="date-comments">
+	{% if blog_post.allow_comments %}
+		{% if settings.COMMENTS_DISQUS_SHORTNAME %}
+		<a href="{{ blog_post.get_absolute_url }}#disqus_thread"
+			data-disqus-identifier="{% disqus_id_for blog_post %}">
+			{% trans "Comments" %}
+		</a>
+		{% else %}
+		<a href="{{ blog_post.get_absolute_url }}#comments">
+			{% blocktrans count comments_count=blog_post.comments_count %}{{ comments_count }} comment{% plural %}{{ comments_count }} comments{% endblocktrans %}
+		</a>
+		{% endif %}
+		{% endif %}
+		
+	</p>
+	{% endeditable %}
+	{% endblock %}
 
-{% if tag or category or year or month or author %}
-    {% block blog_post_list_filterinfo %}
-    <p>
-    {% if tag %}
-        {% trans "Viewing posts tagged" %} {{ tag }}
-    {% else %}{% if category %}
-        {% trans "Viewing posts for the category" %} {{ category }}
-    {% else %}{% if year or month %}
-        {% trans "Viewing posts from" %} {% if month %}{{ month }}, {% endif %}
-        {{ year }}
-    {% else %}{% if author %}
-        {% trans "Viewing posts by" %}
-        {{ author.get_full_name|default:author.username }}
-    {% endif %}{% endif %}{% endif %}{% endif %}
-    {% endblock %}
-    </p>
-{% else %}
-    {% if page %}
-    {% block blog_post_list_pagecontent %}
-    {% if page.get_content_model.content %}
-        {% editable page.get_content_model.content %}
-        {{ page.get_content_model.content|richtext_filters|safe }}
-        {% endeditable %}
-    {% endif %}
-    {% endblock %}
-    {% endif %}
-{% endif %}
+	{% if settings.BLOG_USE_FEATURED_IMAGE and blog_post.featured_image %}
+	{% block blog_post_list_post_featured_image %}
+	<a href="{{ blog_post.get_absolute_url }}">
+		<img class="img-thumbnail pull-left" src="{{ MEDIA_URL }}{% thumbnail blog_post.featured_image 90 90 %}">
+	</a>
+	{% endblock %}
+	{% endif %}
 
-{% for blog_post in blog_posts.object_list %}
-{% block blog_post_list_post_title %}
-{% editable blog_post.title %}
-<h2>
-    <a href="{{ blog_post.get_absolute_url }}">{{ blog_post.title }}</a>
-</h2>
-{% endeditable %}
-{% endblock %}
-{% block blog_post_list_post_metainfo %}
-{% editable blog_post.publish_date %}
-<h6 class="post-meta">
-    {% trans "Posted by" %}:
-    {% with blog_post.user as author %}
-    <a href="{% url "blog_post_list_author" author %}">{{ author.get_full_name|default:author.username }}</a>
-    {% endwith %}
-    {% with blog_post.categories.all as categories %}
-    {% if categories %}
-    {% trans "in" %}
-    {% for category in categories %}
-    <a href="{% url "blog_post_list_category" category.slug %}">{{ category }}</a>{% if not forloop.last %}, {% endif %}
-    {% endfor %}
-    {% endif %}
-    {% endwith %}
-    {% blocktrans with sometime=blog_post.publish_date|timesince %}{{ sometime }} ago{% endblocktrans %}
-</h6>
-{% endeditable %}
-{% endblock %}
+	{% block blog_post_list_post_content %}
+	{% editable blog_post.content %}
+	{{ blog_post.description_from_content|safe }}
+	{% endeditable %}
+	{% endblock %}
 
-{% if settings.BLOG_USE_FEATURED_IMAGE and blog_post.featured_image %}
-{% block blog_post_list_post_featured_image %}
-<a href="{{ blog_post.get_absolute_url }}">
-    <img class="img-thumbnail pull-left" src="{{ MEDIA_URL }}{% thumbnail blog_post.featured_image 90 90 %}">
-</a>
-{% endblock %}
-{% endif %}
+	{% block blog_post_list_post_links %}
+	<div class="blog-list-detail">
+		{% keywords_for blog_post as tags %}
+		{% if tags %}
+		<ul class="list-inline tags">
+		{% trans "Tags" %}:
+		{% spaceless %}
+		{% for tag in tags %}
+		<li><a href="{% url "blog_post_list_tag" tag.slug %}" class="tag">{{ tag }}</a>{% if not forloop.last %}, {% endif %}</li>
+		{% endfor %}
+		{% endspaceless %}
+		</ul>
+		{% endif %}
+		<p class="read-more">
+		<a href="{{ blog_post.get_absolute_url }}" class="btn btn-primary">{% trans "read more" %}</a>
+		</p>
+	</div>
+	{% endblock %}
+	{% endfor %}
 
-{% block blog_post_list_post_content %}
-{% editable blog_post.content %}
-{{ blog_post.description_from_content|safe }}
-{% endeditable %}
-{% endblock %}
+	{% pagination_for blog_posts %}
 
-{% block blog_post_list_post_links %}
-<div class="blog-list-detail">
-    {% keywords_for blog_post as tags %}
-    {% if tags %}
-    <ul class="list-inline tags">
-    {% trans "Tags" %}:
-    {% spaceless %}
-    {% for tag in tags %}
-    <li><a href="{% url "blog_post_list_tag" tag.slug %}" class="tag">{{ tag }}</a>{% if not forloop.last %}, {% endif %}</li>
-    {% endfor %}
-    {% endspaceless %}
-    </ul>
-    {% endif %}
-    <p>
-    <a href="{{ blog_post.get_absolute_url }}">{% trans "read more" %}</a>
-    {% if blog_post.allow_comments %}
-    /
-    {% if settings.COMMENTS_DISQUS_SHORTNAME %}
-    <a href="{{ blog_post.get_absolute_url }}#disqus_thread"
-        data-disqus-identifier="{% disqus_id_for blog_post %}">
-        {% trans "Comments" %}
-    </a>
-    {% else %}
-    <a href="{{ blog_post.get_absolute_url }}#comments">
-        {% blocktrans count comments_count=blog_post.comments_count %}{{ comments_count }} comment{% plural %}{{ comments_count }} comments{% endblocktrans %}
-    </a>
-    {% endif %}
-    {% endif %}
-    </p>
+	{% if settings.COMMENTS_DISQUS_SHORTNAME %}
+	{% include "generic/includes/disqus_counts.html" %}
+	{% endif %}
+	</div>
 </div>
-{% endblock %}
-{% endfor %}
-
-{% pagination_for blog_posts %}
-
-{% if settings.COMMENTS_DISQUS_SHORTNAME %}
-{% include "generic/includes/disqus_counts.html" %}
-{% endif %}
-
+</div>
 {% endblock %}
 
 {% block right_panel %}
-{% include "blog/includes/filter_panel.html" %}
 {% endblock %}
