--- a/theme/templates/generic/includes/comment.html
+++ b/theme/templates/generic/includes/comment.html
@@ -3,7 +3,7 @@
 {% for comment in comments_for_thread %}
 
 <div id="comment-{{ comment.id }}"
-    class="comment media{% if comment.by_author %} comment-author{% endif %}">
+    class="row comment media{% if comment.by_author %} comment-author{% endif %}">
 
     {% editable comment.is_public comment.is_removed %}
     {% if not comment.is_removed and comment.is_public or request.user.is_staff %}
