--- a/theme/templates/shop/billing_shipping.html
+++ b/theme/templates/shop/billing_shipping.html
@@ -1,11 +1,6 @@
 {% extends "shop/checkout.html" %}
 {% load staticfiles i18n mezzanine_tags %}
 
-{% block extra_head %}
-{{ block.super }}
-<script src="{% static "cartridge/js/shipping_fields.js" %}"></script>
-{% endblock %}
-
 {% block fields %}
 {% if request.cart.has_items %}
 {% if not request.user.is_authenticated %}
@@ -46,4 +41,9 @@ If you have an existing account or would like to create one, please
 {% fields_for form.other_fields %}
 
 {% endif %}
+{% endblock %}
+
+{% block exstra_js %}
+{{ block.super }}
+<script src="{% static "cartridge/js/shipping_fields.js" %}"></script>
 {% endblock %}
