--- a/theme/templates/shop/cart.html
+++ b/theme/templates/shop/cart.html
@@ -1,16 +1,27 @@
 {% extends "shop/base.html" %}
-{% load mezzanine_tags shop_tags i18n %}
+{% load mezzanine_tags shop_tags pages_tags theme_tags i18n %}
 
 {% block meta_title %}{% trans "Your Cart" %}{% endblock %}
-{% block title %}{% trans "Your Cart" %}{% endblock %}
+{# {% block title %}{% trans "Your Cart" %}{% endblock %} #}
 {% block body_id %}cart{% endblock %}
 
 {% block breadcrumb_menu %}
-{{ block.super }}
-<li>{% trans "Your Cart" %}</li>
+<ul class="breadcrumb">
+	{% spaceless %}
+	{% page_menu "pages/menus/breadcrumb.html" %}
+	{% endspaceless %}
+	<li>{% trans "Your Cart" %}</li>
+</ul>
+{% endblock %}
+
+{% block left_panel %}
 {% endblock %}
 
 {% block main %}
+<div id="content">
+<div class="col-md-9" id="basket">
+<div class="box">
+<h1>{% trans "Your Cart" %}</h1>
 {% if cart_formset.forms %}
 <form method="post" class="cart-form">
 {% csrf_token %}
@@ -21,56 +32,52 @@
 {% endif %}
 {{ cart_formset.management_form }}
 <table class="table table-striped">
-    <thead>
-    <tr>
-        <th colspan="2" class="left">{% trans "Item" %}</th>
-        <th>{% trans "Unit Price" %}</th>
-        <th class="center">{% trans "Qty" %}</th>
-        <th>{% trans "Price" %}</th>
-        <th class="center">{% trans "Remove?" %}</th>
-    </tr>
-    </thead>
-    <tbody>
-    {% for form in cart_formset.forms %}
-    {% with form.instance as item %}
-    <tr>
-        <td width="30">
-            {{ form.id }}
-            {% if item.image %}
-            <a href="{{ item.get_absolute_url }}">
-                <img alt="{{ item.description }}" src="{{ MEDIA_URL }}{% thumbnail item.image 30 30 %}">
-            </a>
-            {% endif %}
-        </td>
-        <td class="left">
-            <a href="{{ item.get_absolute_url }}">{{ item.description }}</a>
-        </td>
-        <td>{{ item.unit_price|currency }}</td>
-        <td class="quantity">{{ form.quantity }}</td>
-        <td>{{ item.total_price|currency }}</td>
-        <td class="center">{{ form.DELETE }}</td>
-    </tr>
-    {% endwith %}
-    {% endfor %}
-    <tr>
-        <td colspan="5">{% order_totals %}</td>
-        <td>&nbsp;</td>
-    </tr>
-    </tbody>
+	<thead>
+	<tr>
+		<th colspan="2" class="left">{% trans "Item" %}</th>
+		<th>{% trans "Unit Price" %}</th>
+		<th class="center">{% trans "Qty" %}</th>
+		<th>{% trans "Price" %}</th>
+		<th class="center">{% trans "Remove" %}</th>
+	</tr>
+	</thead>
+	<tbody>
+	{% for form in cart_formset.forms %}
+	{% with form.instance as item %}
+	<tr>
+		<td>
+			{{ form.id }}
+			{% if item.image %}
+			<a href="{{ item.get_absolute_url }}">
+				<img alt="{{ item.description }}" src="{{ MEDIA_URL }}{% thumbnail item.image 30 30 %}">
+			</a>
+			{% endif %}
+		</td>
+		<td class="center">
+			<a href="{{ item.get_absolute_url }}">{{ item.description }}</a>
+		</td>
+		<td>{{ item.unit_price|rub_currency }}</td>
+		<td class="quantity">{{ form.quantity }}</td>
+		<td>{{ item.total_price|rub_currency }}</td>
+		<td class="center">{{ form.DELETE }}</td>
+	</tr>
+	{% endwith %}
+	{% endfor %}
+	</tbody>
 </table>
 
-<div class="form-actions">
-    <a href="{% url "shop_checkout" %}" class="btn btn-primary btn-lg pull-right">
-        {% if request.session.order.step %}{% trans "Return to Checkout" %}{% else %}{% trans "Go to Checkout" %}{% endif %}
-    </a>
-    <input type="submit" name="update_cart" class="btn btn-default btn-lg pull-left" value="{% trans "Update Cart" %}">
+<div class="box-footer">
+	<a href="{% url "shop_checkout" %}" class="btn btn-primary pull-right">
+		{% if request.session.order.step %}Вернуться к оплате{% else %}{% trans "Go to Checkout" %}{% endif %}
+	</a>
+	<input type="submit" name="update_cart" class="btn btn-default" value="{% trans "Update Cart" %}">
 </div>
 </form>
 
 {% if discount_form %}
 <form method="post" class="discount-form col-md-12 text-right">
-    {% fields_for discount_form %}
-    <input type="submit" class="btn btn-default" value="{% trans "Apply" %}">
+	{% fields_for discount_form %}
+	<input type="submit" class="btn btn-default" value="{% trans "Apply" %}">
 </form>
 {% endif %}
 
@@ -79,29 +86,44 @@
 {% if upsell_products %}
 <h2>{% trans "You may also like:" %}</h2>
 <div class="row">
-    {% for product in upsell_products %}
-    <div class="col-xs-6 col-sm-4 col-md-3 product-thumb">
-        <a class="thumbnail" href="{{ product.get_absolute_url }}">
-            {% if product.image %}
-            <img src="{{ MEDIA_URL }}{% thumbnail product.image 90 90 %}">
-            {% endif %}
-            <div class="caption">
-            <h6>{{ product }}</h6>
-            <div class="price-info">
-            {% if product.has_price %}
-                {% if product.on_sale %}
-                <span class="old-price">{{ product.unit_price|currency }}</span>
-                {% trans "On sale:" %}
-                {% endif %}
-                <span class="price">{{ product.price|currency }}</span>
-            {% else %}
-                <span class="coming-soon">{% trans "Coming soon" %}</span>
-            {% endif %}
-            </div>
-            </div>
-        </a>
-    </div>
-    {% endfor %}
+	{% for product in upsell_products %}
+	<div class="col-xs-6 col-md-3">
+			<div class="product">
+			{% if product.image %}
+				<div class="flip-container">
+				<div class="flipper">
+					<div class="front">
+						<a href="{{ product.get_absolute_url }}">
+							<img src="{{ MEDIA_URL }}{% thumbnail product.image 260 260 %}" alt="{{ product.image.description }}" class="img-responsive">
+						</a>
+					</div>
+					<div class="back">
+						<a href="{{ product.get_absolute_url }}">
+							<img src="{{ MEDIA_URL }}{% thumbnail product.image 260 245 %}" alt="{{ product.image.description }}" class="img-responsive">
+						</a>
+					</div>
+				</div>
+				</div>
+				<a href="{{ product.get_absolute_url }}" class="invisible">
+					<img src="{{ MEDIA_URL }}{% thumbnail product.image 260 260 %}" alt="{{ product.image.description }}" class="img-responsive">
+				</a>
+			{% endif %}
+				<div class="text">
+					<h3><a href="{{ product.get_absolute_url }}">{{ product }}</a></h3>
+					{% if product.has_price %}
+						<p class="price">
+						{% if product.on_sale %}
+							<del>{{ product.unit_price|rub_currency }}</del>
+						{% endif %}
+						{{ product.price|rub_currency }}
+						</p>
+					{% else %}
+						<p class="coming-soon">{% trans "Coming soon" %}</p>
+					{% endif %}
+				</div>
+			</div>
+		</div>
+	{% endfor %}
 </div>
 {% endif %}
 {% endwith %}
@@ -110,4 +132,13 @@
 {% else %}
 <p>{% trans "Your Cart is empty." %}</p>
 {% endif %}
+</div>
+</div>
+</div>
+{% endblock %}
+
+{% block right_panel %}
+<div class="col-md-3">
+	{% order_totals %}
+</div>
 {% endblock %}
