--- a/theme/templates/accounts/account_password_reset.html
+++ b/theme/templates/accounts/account_password_reset.html
@@ -2,6 +2,8 @@
 {% load i18n %}
 
 {% block main %}
+<div class="col-md-9 box"> 
 {{ block.super }}
 <p>{% trans "Enter your username or email address and you'll receive an email with a link you need to click, in order to log in and change your password." %}</p>
+</div>
 {% endblock %}
