--- a/theme/templates/blog/blog_post_detail.html
+++ b/theme/templates/blog/blog_post_detail.html
@@ -25,6 +25,7 @@
 <div id="content">
 <div class="col-md-9" id="blog-post">
 <div class="box">
+<h1>{{ blog_post.title }}</h1>
 {% block blog_post_detail_postedby %}
 {% editable blog_post.publish_date %}
 <p class="author-date">
