--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -26,6 +26,39 @@
 		</div>
 	</div>
 </div>
+
+<div id="advantages">
+                <div class="container">
+                    <div class="same-height-row">
+                        <div class="col-sm-4">
+                            <div class="box same-height clickable" style="height: auto;">
+                                <div class="icon"><i class="fa fa-shopping-cart"></i>
+                                </div>
+                                <h3><a href="/shop/">ХОЧУ КУПИТЬ</a></h3>
+                                <p>We are known to provide best possible service ever</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="box same-height clickable" style="height: auto;">
+                                <div class="icon"><i class="fa fa-money"></i>
+                                </div>
+                                <h3><a href="/create/">ХОЧУ ПРОДАТЬ</a></h3>
+                                <p>Шкаф ломится от ненужной одежды? Освободите его для новых вещей.</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="box same-height clickable" style="height: auto;">
+                                <div class="icon"><i class="fa fa-book"></i>
+                                </div>
+                                <h3><a href="/blog/">ХОЧУ ПОЧИТАТЬ</a></h3>
+                                <p>Пишем по-дружески и просто: тренды, лайфхаки, советы стилистов. И чуть-чуть психологии.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.row -->
+                </div>
+                <!-- /.container -->
+            </div>
 {% endblock %} 
 
 {% block right_panel %} {% endblock %} 
