--- a/theme/templates/accounts/account_login.html
+++ b/theme/templates/accounts/account_login.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block main %}
-
+<div class="col-md-9 box"> 
 {% if request.user.is_authenticated %}
     <p>{% trans "You're already logged in. If you'd like to log in as a different user, you'll need to log out first." %}</p>
 {% else %}
@@ -13,5 +13,6 @@
     {% url "profile_update" as profile_update_url %}
     {% blocktrans %}<p>You can also <a href="{{ password_reset_url }}?next={{ profile_update_url }}">reset your password</a> if you've forgotten it.</p>{% endblocktrans %}</p>
 {% endif %}
-
+</div>
 {% endblock %}
+
