--- a/theme/templates/accounts/account_signup.html
+++ b/theme/templates/accounts/account_signup.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block main %}
-
+<div class="col-md-9 box"> 
 {% if request.user.is_authenticated %}
     <p>{% trans "You're already logged in. If you'd like to create a new account, you'll need to log out first." %}</p>
 {% else %}
@@ -13,5 +13,5 @@
     <p>{% trans "After signing up, you'll receive an email with a link you need to click, in order to activate your account." %}</p>
     {% endif %}
 {% endif %}
-
+</div>
 {% endblock %}
