--- a/theme/templates/blog/blog_post_list.html
+++ b/theme/templates/blog/blog_post_list.html
@@ -55,7 +55,7 @@
 					{% url "blog_post_list_category" category.slug as the_url %}
 					<li class="{% if request.get_full_path == the_url %} active {% endif %}">
 					<a href="{{the_url}}"
-						>{{ category }} <span class="badge pull-right">{{ category.post_count }} </span>  </li>
+						>{{ category }} <span class="badge pull-right">{{ category.post_count }} </span> </a>  </li>
 				{% endfor %}
 				</ul>
 			</div>
@@ -105,8 +105,9 @@
 	{% endif %}
 	</div>
 	
-	<div class="post">
+	
 	{% for blog_post in blog_posts.object_list %}
+	<div class="post">
 	{% block blog_post_list_post_title %}
 	{% editable blog_post.title %}
 	<h2>
@@ -181,6 +182,7 @@
 		</p>
 	</div>
 	{% endblock %}
+	</div>
 	{% endfor %}
 
 	{% pagination_for blog_posts %}
