--- a/theme/templates/pages/category.html
+++ b/theme/templates/pages/category.html
@@ -38,10 +38,10 @@
 <div class="row shop-category-list">
 {% if settings.SHOP_CATEGORY_USE_FEATURED_IMAGE %}
     {% for category in child_categories %}
-    <div class="col-xs-6 col-sm-4 col-lg-3">
-    <a href="{{ category.get_absolute_url }}" class="thumbnail">
+    <div class="col-xs-4 col-sm-3 col-lg-3">
+    <a href="{{ category.get_absolute_url }}">
         {% if category.featured_image %}
-        <img src="{{ MEDIA_URL }}{% thumbnail category.featured_image 148 148 %}" />
+        <img src="{{ MEDIA_URL }}{% thumbnail category.featured_image 200 200 %}" class="img-responsive" />
         {% else %}
         <div class="placeholder"></div>
         {% endif %}
@@ -91,7 +91,7 @@
 <div id="content">
 <div class="row products">
 {% for product in products.object_list %}
-<div class="col-xs-12 col-sm-6 col-md-4">
+<div class="col-xs-6 col-sm-4 col-md-4">
     <div class="product">
         {% if product.image %}
         <div class="flip-container">
@@ -126,7 +126,7 @@
             {% endif %} 
             <p class="buttons">
                 <a href="{{ product.get_absolute_url }}" class="btn btn-default">Подробнее</a>
-                <a href="/" class="btn btn-primary"><i class="fa fa-shopping-cart"></i>В корзину</a>
+                <!-- <a href="/" class="btn btn-primary"><i class="fa fa-shopping-cart"></i>В корзину</a> -->
             </p>
         </div>
     </div>
