--- a/theme/templates/blog/blog_post_list.html
+++ b/theme/templates/blog/blog_post_list.html
@@ -61,7 +61,7 @@
 			</div>
 		</div>
 	{% else %}
-		<div class="col-md-3 left">
+		<div class="box">
 				<div class="panel panel-default">{% page_menu "pages/menus/tree.html" %}</div>
 		</div>
 	{% endif %}
