--- a/theme/templates/pages/category.html
+++ b/theme/templates/pages/category.html
@@ -11,12 +11,12 @@
 <div class="col-md-3">
     {# {% if categories %} #}
         <div class="panel panel-default sidebar-menu">
-            <div class="panel-heading">
+            <!-- <div class="panel-heading">
                 <h3 class="panel-title">{% trans "Categories" %}</h3>
             </div>
-            <div class="panel-body">
+            <div class="panel-body"> -->
                 {% shop_menu "pages/menus/shop_tree.html" %}
-            </div>
+            <!-- </div> -->
         </div>
     {# {% endif %} #}
 </div>
