--- a/theme/static/css/custom.css
+++ b/theme/static/css/custom.css
@@ -85,11 +85,11 @@ footer .social a.email:hover {
 }
 
 .navlist-menu-level-0 {
-  padding: 10px;
+  /*padding: 10px;*/
 }
 
 .navlist-menu-level-1, .navlist-menu-level-2 {
-  padding: 5px 0px 5px 15px;
+  padding: 5px 0px 5px 10px;
 }
 
 .navlist-menu-level-1 a {
@@ -150,4 +150,19 @@ footer .social a.email:hover {
 }
 .shop-category-list a {
   color: black;
+}
+
+.panel-heading {
+  color: #333;
+  background-color: #f5f5f5;
+  border-color: #ddd;
+  padding-left: 10px;
+}
+
+.panel-title {
+  margin-left: 15px;
+}
+
+.panel-body {
+  padding: 5px 15px 5px 0px;
 }
