--- a/theme/templates/pages/menus/shop_tree.html
+++ b/theme/templates/pages/menus/shop_tree.html
@@ -2,20 +2,29 @@
 
 {% spaceless %}
 {% if page_branch_in_menu %}
-<ul class="nav nav-list navlist-menu-level-{{ branch_level }}">
-  {% for page in page_branch %}
-  {% if page.in_menu %}
-  <li class="
-    {% if page.is_current %} active{% endif %}
-    {% if page.is_current_or_ascendant %} active-branch{% endif %}
-    " id="tree-menu-{{ page.html_id }}">
-    <a href="{{ page.get_absolute_url }}">{{ page.title }}</a>
-    {# wrap the next line with 'if page.is_current_or_ascendant' #}
-    {# to only show child pages in the menu for the current page #}
-    {% if page.has_children_in_menu %}{% page_menu page %}{% endif %}
-  </li>
-  {% endif %}
-  {% endfor %}
-</ul>
+    <ul class="nav nav-list navlist-menu-level-{{ branch_level }}">
+      {% for page in page_branch %}
+        {% if page.in_menu %}
+          {% if page.get_absolute_url != '/catalog/' %}
+            <li class="
+              {% if page.is_current %} active{% endif %}
+              {% if page.is_current_or_ascendant %} active-branch{% endif %}
+              " id="tree-menu-{{ page.html_id }}">
+              <a href="{{ page.get_absolute_url }}">{{ page.title }}</a>
+              {# wrap the next line with 'if page.is_current_or_ascendant' #}
+              {# to only show child pages in the menu for the current page #}
+              {% if page.has_children_in_menu %}{% page_menu page %}{% endif %}
+            </li>
+          {% else %}
+              <div class="panel-heading">
+                <h3 class="panel-title">{% trans "Categories" %}</h3>
+              </div>
+              <div class="panel-body">
+                {% if page.has_children_in_menu %}{% page_menu page %}{% endif %}
+              </div>
+          {% endif %}
+        {% endif %}
+      {% endfor %}
+    </ul>
 {% endif %}
 {% endspaceless %}
