--- a/theme/static/css/custom.css
+++ b/theme/static/css/custom.css
@@ -88,7 +88,7 @@ footer .social a.email:hover {
   /*padding: 10px;*/
 }
 
-.navlist-menu-level-1, .navlist-menu-level-2 {
+.navlist-menu-level-1, .navlist-menu-level-2, .navlist-menu-level-3, .navlist-menu-level-4, .navlist-menu-level-5 {
   padding: 5px 0px 5px 10px;
 }
 
